--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "vanilla-app-template",
+  "name": "algorit-js-form-107",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build --base=/goit-js-hw-12",
+    "build": "vite build --base=/algorit-js-form-107/",
     "preview": "vite preview"
   },
   "devDependencies": {
@@ -18,7 +18,7 @@
     "axios": "^1.7.3",
     "izitoast": "^1.4.0",
     "simplelightbox": "^2.14.3",
-    "vite-plugin-full-reload": "^1.0.5",
-    "vite-plugin-html-inject": "^1.0.1"
+    "vite-plugin-full-reload": "^1.2.0",
+    "vite-plugin-html-inject": "^1.1.2"
   }
 }
